xfsprogs-1.3.18 (17 January 2002)
	- fix mkfs.xfs buglet in overwriting signatures when run
	  on a regular file

xfsprogs-1.3.17 (14 January 2002)
	- mkfs.xfs overwrites pre-existing filesystem, swap, or md
	  driver signatures.
	- xfs_repair fix to prevent double insertion into the
	  uncertain_inode AVL trees ("avl_insert: duplicate range")
	- xfs_repair fix if the log is corrupted and we can't find
	  the head, don't exit - just proceed on with zeroing it
	- use snprintf instead of sprintf throughout

xfsprogs-1.3.16 (17 December 2001)
	- added text dump type to xfs_db (mkp)
	- removed use of a temporary file in xfs_db when processing
	  commands on the command line - allows xfs_check to be run
	  on read-only root filesystems

xfsprogs-1.3.15 (12 December 2001)
	- reenable the use of the BLKBSZSET ioctl, its baaack
	- sync recent XFS kernel source changes back into libxfs

xfsprogs-1.3.14 (05 December 2001)
	- fix minor debian package version numbering issue
	- add documentation for xfs_db(8) label/uuid commands
	- automatic inode sizing code in mkfs.xfs has been removed
	  (restricting inodes to 32 bits) - Steve's recent kernel
	  changes mean this is no longer an issue
	- fix bug in mkfs.xfs size cross-check for realtime device

xfsprogs-1.3.13 (25 October 2001)
	- fix bug in mkfs for 1Tbyte + filesystems
	- sync with recent kernel changes - this does not affect
	  userspace (libxfs), all affected code is removed by cpp.

xfsprogs-1.3.12 (17 October 2001)
	- implement the -f (file) option to xfs_logprint
	- rework the xlog code into libxlog for code sharing
	- xfs_repair now detects a dirty log and, without -L, will
	  no longer blindly zero it (which prevents any recovery)

xfsprogs-1.3.11 (17 October 2001)
	- tidy up some (benign) compiler warnings from libxfs
	- fixed 64-bit pointer alignment issues in xfs_check
	- fixed 64-bit pointer alignment issues in xfs_repair
	- verified these on IA64, also reported to fix sparc issues
