@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=1
 PKG_MINOR=3
-PKG_REVISION=18
+PKG_REVISION=19
 PKG_BUILD=0
